Rewrite for new analysis-model 3.0.0.